05-cluster-workloads/httpecho/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo
spec:
  selector:
    matchLabels:
      app: http-echo
  replicas: 1
  template:
    metadata:
      labels:
        app: http-echo
    spec:
      containers:
        - name: http-echo
          image: hashicorp/http-echo:latest
          args: ["-text=Hello, Kubernetes!", "-listen=:5000"]
          ports:
            - containerPort: 5000
