05-cluster-workloads/httpecho/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-echo
spec:
  selector:
    app: http-echo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
