05-cluster-workloads/httpecho/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo
spec:
  selector:
    matchLabels:
      app: http-echo
  replicas: 1
  template:
    metadata:
      labels:
        app: http-echo
    spec:
      containers:
      - name: http-echo
        image: hashicorp/http-echo:latest
        args: ["-text=Hello, Kubernetes!", "-listen=:5000"]
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: http-echo
spec:
  selector:
    app: http-echo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-echo
spec:
  gatewayClassName: traefik
  listeners:
  - protocol: HTTP
    port: 80
    name: http-echo
    allowedRoutes:
      namespaces:
        from: Same
---
